
  [ Translations of programs ]
    - updated Albanian (Elian Myftiu)

  [ Translations of debconf templates ]
    - updated Khmer (Khoem Sokhem)
    - updated Albanian (Elian Myftiu)

  [ Christian Perrier ]
  * Fix the description of the Dutch desktop task to match other
    desktop tasks. Unfuzzy translations.

  [ Joey Hess ]
  * Switch back to x-window-system-core until xorg reaches testing.

 -- Joey Hess <joeyh@debian.org>  Sun, 23 Apr 2006 14:47:42 -0400

tasksel (2.42) unstable; urgency=low

  [ Translations of tasks ]
    - Added Esperanto (Serge Leblanc)
      Closes: #355120
    - Updated Spanish (Javier Fernandez-Sanguino)
    - Updated Polish (Bartosz Fenski). Closes: #359750
    - Updated Romanian (Eddy Petrişor)

  [ Translations of programs ]
    - Added Esperanto (Serge Leblanc)

  [ Translations of debconf templates ]
    - Added Esperanto (Serge Leblanc)

  [ Christian Perrier ]
    - Rename the Punjabi translation file name from pa_IN to pa
      to fit a decision taken in -i18n
    - change the Test-lang for punjabi from pa_IN to pa for consistency

  [ Rene Engelhard ]
    - update tasks for OOo 2.0.x (closes: #337161)

  [ Translation of tasks ]
   - Added Dzongkha by Pema Geyleg

  [ Translation of programs ]
   - Added Dzongkha by Pema Geyleg

  [ Translation of debconf templates ]
   - Added Dzongkha by Pema Geyleg

  [ Joey Hess ]
  * Switch desktop task to new xorg metapackage.
  * Fix pa_IN Makefile pain.

 -- Joey Hess <joeyh@debian.org>  Thu, 13 Apr 2006 12:18:39 +0200

tasksel (2.41) unstable; urgency=low

  [ Translations of tasks ]
    - Corrected Punjabi (Gurmukhi).
    - Add Bengali, Estonian, Malagasy, Punjabi, Vietnamese to LANG variables
      in the Makefile
    - Completed French
    - Updated Catalan (Jordi Mallach)
    - Updated Danish
    - Updated Galician (Jacobo Tarrio)
    - Updated Lithuanian (Kęstutis Biliūnas)
    - Updated Spanish (Javier Fernandez-Sanguino)
    - Updated Swedish Closes: #350597