@@ -1,7 +1,7 @@
 Task: kde-desktop
 Relevance: 8
 Section: user
-Depends: desktop
+Enhances: desktop
 Test-new-install: skip skip
 Description: KDE desktop environment
  This task provides basic "desktop" software using the K Desktop
