@@ -1,5 +1,5 @@
 Task: arabic-desktop
-Depends: desktop, arabic
+Enhances: desktop, arabic
 Section: l10n
 Description: Arabic environment
  This task localises the desktop in Arabic.
