@@ -1,5 +1,5 @@
 Task: bengali-desktop
-Depends: desktop, bengali
+Enhances: desktop, bengali
 Section: l10n
 Description: Bengali environment
  This task localises the desktop in Bengali.
