@@ -1,5 +1,5 @@
 Task: brazilian-portuguese-desktop
-Depends: desktop, brazilian-portuguese
+Enhances: desktop, brazilian-portuguese
 Section: l10n
 Maintainer: Otavio Salvador <otavio@debian.org>
 Description: Brazilian Portuguese desktop
