@@ -1,6 +1,6 @@
 Task: bulgarian
 Test-lang: bg
-Depends: cyrillic
+Enhances: cyrillic
 Section: l10n
 Description: Bulgarian environment
  This task installs programs and data files that make it easier for
