@@ -1,5 +1,5 @@
 Task: bulgarian-desktop
-Depends: desktop, bulgarian
+Enhances: desktop, bulgarian
 Section: l10n
 Description: Bulgarian desktop
  This task localises the desktop in Bulgarian.
