@@ -1,5 +1,5 @@
 Task: catalan-desktop
-Depends: desktop, catalan
+Enhances: desktop, catalan
 Section: l10n
 Maintainer: Jordi Mallach <jordi@debian.org>
 Description: Catalan desktop
