@@ -1,5 +1,5 @@
 Task: chinese-s-desktop
-Depends: desktop, chinese-s
+Enhances: desktop, chinese-s
 Section: l10n
 Description: Simplified Chinese desktop
  This task localises the desktop in Simplified Chinese.
