@@ -1,5 +1,5 @@
 Task: chinese-t-desktop
-Depends: desktop, chinese-t
+Enhances: desktop, chinese-t
 Section: l10n
 Description: Traditional Chinese environment
  This task localises the desktop in Traditional Chinese.
