@@ -1,5 +1,5 @@
 Task: cyrillic-desktop
-Depends: desktop, cyrillic
+Enhances: desktop, cyrillic
 Section: l10n
 Description: Cyrillic desktop
  This task localises the desktop in Cyrillic.
