@@ -1,5 +1,5 @@
 Task: czech-desktop
-Depends: czech, desktop
+Enhances: czech, desktop
 Section: l10n
 Description: Czech desktop
  This task localises the desktop in Czech.
