@@ -1,5 +1,5 @@
 Task: danish-desktop
-Depends: desktop, danish
+Enhances: desktop, danish
 Section: l10n
 Description: Danish desktop
  This task localises the desktop in Danish.
