@@ -1,5 +1,5 @@
 Task: dutch-desktop
-Depends: desktop, dutch
+Enhances: desktop, dutch
 Section: l10n
 Description: Dutch environment
  This task localises the desktop in Dutch.
