@@ -1,5 +1,5 @@
 Task: french-desktop
-Depends: french, desktop
+Enhances: french, desktop
 Section: l10n
 Description: French desktop
  This task localises the desktop in French.
