@@ -1,5 +1,5 @@
 Task: german-desktop
-Depends: desktop, german
+Enhances: desktop, german
 Section: l10n
 Description: German desktop
  This task localises the desktop in German.
