@@ -1,7 +1,7 @@
 Task: gnome-desktop
 Relevance: 8
 Section: user
-Depends: desktop
+Enhances: desktop
 Test-new-install: skip skip
 Description: Gnome desktop environment
  This task provides basic "desktop" software using the Gnome desktop
