@@ -1,5 +1,5 @@
 Task: greek-desktop
-Depends: desktop, greek
+Enhances: desktop, greek
 Section: l10n
 Maintainer: Konstantinos Margaritis <markos@debian.org>
 Description: Greek desktop
