@@ -1,5 +1,5 @@
 Task: hebrew-desktop
-Depends: desktop, hebrew
+Enhances: desktop, hebrew
 Section: l10n
 Description: Hebrew desktop
  This task localises the desktop in Hebrew.
