@@ -1,5 +1,5 @@
 Task: hindi-desktop
-Depends: desktop, hindi
+Enhances: desktop, hindi
 Section: l10n
 Description: Hindi environment
  This task localises the desktop in Hindi.
