@@ -1,5 +1,5 @@
 Task: hungarian-desktop
-Depends: hungarian, desktop
+Enhances: hungarian, desktop
 Section: l10n
 Description: Hungarian desktop
  This task localises the desktop in Hungarian.
