@@ -1,5 +1,5 @@
 Task: italian-desktop
-Depends: desktop, italian
+Enhances: desktop, italian
 Section: l10n
 Description: Italian desktop
  This task localises the desktop in Italian.
