@@ -1,5 +1,5 @@
 Task: japanese-desktop
-Depends: desktop, japanese
+Enhances: desktop, japanese
 Section: l10n
 Description: Japanese desktop environment
  This task localises the desktop in Japanese.
