@@ -1,5 +1,5 @@
 Task: korean-desktop
-Depends: desktop, korean
+Enhances: desktop, korean
 Section: l10n
 Description: Korean desktop
  This task localises the desktop in Korean.
