@@ -1,5 +1,5 @@
 Task: lithuanian-desktop
-Depends: desktop, lithuanian
+Enhances: desktop, lithuanian
 Section: l10n
 Maintainer: Kęstutis Biliūnas <kebil@kaunas.init.lt>
 Description: Lithuanian desktop
