@@ -1,5 +1,5 @@
 Task: norwegian-desktop
-Depends: desktop, norwegian
+Enhances: desktop, norwegian
 Section: l10n
 Description: Norwegian (Bokmaal and Nynorsk) desktop
  This task localises the desktop in Norwegian.
