@@ -1,5 +1,5 @@
 Task: persian-desktop
-Depends: desktop, persian
+Enhances: desktop, persian
 Section: l10n
 Description: Persian environment
  This task localises the desktop in Persian.
