@@ -1,5 +1,5 @@
 Task: polish-desktop
-Depends: desktop, polish
+Enhances: desktop, polish
 Section: l10n
 Description: Polish desktop
  This task localises the desktop in Polish.
