@@ -1,5 +1,5 @@
 Task: punjabi-desktop
-Depends: desktop, punjabi
+Enhances: desktop, punjabi
 Section: l10n
 Description: Punjabi environment
  This task localises the desktop in Punjabi.
