@@ -1,5 +1,5 @@
 Task: romanian-desktop
-Depends: desktop, romanian
+Enhances: desktop, romanian
 Section: l10n
 Description: Romanian desktop
  This task localises the desktop in Romanian.
