@@ -1,5 +1,5 @@
 Task: russian-desktop
-Depends: desktop, russian
+Enhances: desktop, russian
 Section: l10n
 Description: Russian desktop
  This task localises the desktop in Russian.
