@@ -1,5 +1,5 @@
 Task: slovak-desktop
-Depends: slovak, desktop
+Enhances: slovak, desktop
 Section: l10n
 Description: Slovak desktop
  This task localises the desktop in Slovak.
