@@ -1,5 +1,5 @@
 Task: spanish-desktop
-Depends: desktop, spanish
+Enhances: desktop, spanish
 Section: l10n
 Description: Spanish desktop
  This task localises the desktop in Spanish.
