@@ -1,5 +1,5 @@
 Task: swedish-desktop
-Depends: desktop, swedish
+Enhances: desktop, swedish
 Section: l10n
 Description: Swedish desktop
  This task localises the desktop in Swedish.
