@@ -1,5 +1,5 @@
 Task: thai-desktop
-Depends: desktop, thai
+Enhances: desktop, thai
 Section: l10n
 Description: Thai desktop
  This task localises the desktop in Thai.
