@@ -1,5 +1,5 @@
 Task: turkish-desktop
-Depends: desktop, turkish
+Enhances: desktop, turkish
 Section: l10n
 Description: Turkish desktop
  This task localises the desktop in Turkish.
