@@ -1,5 +1,5 @@
 Task: ukrainian-desktop
-Depends: desktop, ukrainian
+Enhances: desktop, ukrainian
 Section: l10n
 Description: Ukrainian desktop
  This task localises the desktop in Ukrainian.
